crates/claptrap-core/tests/snapshots/tests__arg__default_missing_value-bool_literal2.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_create='false'
