crates/claptrap-core/tests/snapshots/tests__arg__default_missing_values.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_color=('always' 'auto')
