crates/claptrap-core/tests/snapshots/tests__arg__default_value_if-equals1.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_opt='special'
claptrap_other='default'
