crates/claptrap-core/tests/snapshots/tests__arg__default_value_if-present.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_flag='true'
claptrap_other='default'
