crates/claptrap-core/tests/snapshots/tests__arg__default_value_ifs-1.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_opt='channel'
claptrap_flag='false'
claptrap_other='chan'
