crates/claptrap-core/tests/snapshots/tests__arg__default_value_ifs-order.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_opt='channel'
claptrap_flag='true'
claptrap_other='default'
